--- a/Logistic_Regression_model.ipynb
+++ b/Logistic_Regression_model.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning - Bob the Builder\n",
+    "# Machine Learning - Bob the Builder (From Sololearn)\n",
     "\n",
     "\n",
     "## Building a Logistic Regression model.\n",
@@ -375,16 +375,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is a common enough calculation, that sklearn has already implemented it for us. So we can get the same result by using the score method. The score method uses the model to make a prediction for X and counts what percent of them match y."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -393,12 +385,15 @@
        "1.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# This is a common enough calculation, that sklearn has already implemented it for us.  \n",
+    "# So we can get the same result by using the score method.  \n",
+    "# The score method uses the model to make a prediction for X and counts what percent of them match y.\n",
     "model.score(arrX, arrY)"
    ]
   },
@@ -437,27 +432,6 @@
     "# Let's see other point on the graph\n",
     "print(model.predict([[8, 2]])) \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
